# escarabajo

./: .gitignore  AGENTS.md  DOCUMENT_GENERATION.md  README.md  pyproject.toml
.Escarabajo/: config.yaml
Escarabajo/: __init__.py  __main__.py  cli.py  config.py  fsutil.py  indexdb.py  prompts.py  server.py  sync.py
Escarabajo/extract/: __init__.py  docx.py  pdf.py  pptx.py
tests/: __init__.py  example_random_app_documentation.md  mcp_client.py  random_app.py  test_authoritative_fixtures.py  test_mcp_tools.py
tests/data/: RNGenius_Functional_Spec.docx  RNGenius_Philosophy.pptx
